--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         border-radius: 8px;
         cursor: pointer;
         transition: all 0.3s ease;
+        text-align: center;
         font-family: "Vazirmatn", "Noto Serif", sans-serif;
       }
 
